--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
 		<meta charset="utf-8" />
 		<meta name="description" content="Onyeka Ijeh is an aspiring Web Developer based in Nigeria.">
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
+		<link rel="stylesheet" href="assets/css/font-awesome.min.css"/>
 		<link rel="stylesheet" href="assets/css/main.css?v=1.2" />
 		<!--[if lte IE 9]><link rel="stylesheet" href="assets/css/ie9.css" /><![endif]-->
 		<noscript><link rel="stylesheet" href="assets/css/noscript.css" /></noscript>
