--- a/index.html
+++ b/index.html
@@ -74,9 +74,9 @@
 								<p><!--[-->Aspiring Web Developer based in Nigeria.<!--]--></p>
 							</div>
 <ul class="icons">
-									<li><a href="https://twitter.com/OnyekaIjeh" class="icon fa-twitter"><span class="label">Twitter</span></a></li>
-									<li><a href="https://facebook.com/YekaIjeh" class="icon fa-facebook"><span class="label">Facebook</span></a></li>
-									<li><a href="https://github.com/OnyekaIjeh" class="icon fa-github"><span class="label">GitHub</span></a></li>
+									<li><a href="https://twitter.com/OnyekaIjeh" class="icon fa fa-twitter"><span class="label">Twitter</span></a></li>
+									<li><a href="https://facebook.com/YekaIjeh" class="icon fa fa-facebook"><span class="label">Facebook</span></a></li>
+									<li><a href="https://github.com/OnyekaIjeh" class="icon fa fa-github"><span class="label">GitHub</span></a></li>
 			<!--						<li><a href="#" class="icon fa-instagram"><span class="label">Instagram</span></a></li> 
 									<li><a href="github.com/OnyekaIjeh" class="icon fa-github"><span class="label">GitHub</span></a></li> -->
 								</ul>
@@ -135,7 +135,7 @@
 
 							<!-- Portfolio -->
 							<article id="portfolio">
-								<h2 class="major">Portfolio <a href="https://github.com/OnyekaIjeh" class="icon fa-github"><span class="label">GitHub</span></a></h2>
+								<h2 class="major">Portfolio <a href="https://github.com/OnyekaIjeh" class="icon fa fa-github"><span class="label">GitHub</span></a></h2>
 
 
 								<!-- <span class="image main"><img src="images/pic03.jpg" alt="" /></span> -->
