--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
 								<li><a href="#work">Work</a></li>
 								<li><a href="#about">About</a></li>     
 								<li><a href="#elements">Elements</a></li>      -->   
-								<li><a href="/">Home</a></li>
+								<li><a href="">Home</a></li>
 								<li><a href="#about">About Me</a></li>
 								<li><a href="#portfolio">Portfolio</a></li>
 							<!--	<li><a href="blog">Blog</a></li>  -->
@@ -475,9 +475,9 @@ print 'It took ' + i + ' iterations to sort the deck.';</code></pre>
 			<script src="assets/js/skel.min.js"></script>
 			<script src="assets/js/util.js"></script>
 			<script src="assets/js/main.js"></script>
-			<script src="https://unpkg.com/axios/dist/axios.min.js"></script>
+		<!--	<script src="https://unpkg.com/axios/dist/axios.min.js"></script>
    			<script src="https://unpkg.com/vue"></script>
-			<script src="assets/js/vue-contact.js"></script>
+			<script src="assets/js/vue-contact.js"></script> -->
 
 	</body>
 </html>
