--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
 						<div class="content">
 							<div class="inner">
 								<h1>Onyeka Ijeh</h1>
-								<p><!--[-->Aspiring Web Developer based in Nigeria.<!--]--></p>
+								<p>Aspiring Web Developer based in Nigeria.</p>
 							</div>
 <ul class="icons">
 									<li><a href="https://twitter.com/OnyekaIjeh" class="icon fa fa-twitter"><span class="label">Twitter</span></a></li>
