--- a/index.html
+++ b/index.html
@@ -143,11 +143,11 @@
 
 								</br>
 
-							<li>	<p>An e-commerce site built using OpenCart and Paystack for payments</p>
+						<!--	<li>	<p>An e-commerce site built using OpenCart and Paystack for payments</p>
 								<p>Link: <a href="https://jogo.ng">Jogo</a></p></li>
 
 								</br>
-
+-->
 
 							<li>	<p>A countdown timer using Vue.js (Javascript framework)</p>
 								<p>Link: <a href="https://github.com/OnyekaIjeh/vue-countdown">Vue Countdown</a></p></li>
