--- a/index.html
+++ b/index.html
@@ -47,8 +47,8 @@
 <link rel="icon" type="image/png" href="images/icon/favicon-16x16.png" sizes="16x16" />
 <link rel="icon" type="image/png" href="images/icon/favicon-128.png" sizes="128x128" />
 <meta name="application-name" content="Onyeka Ijeh - Aspiring Web Developer"/>
-<meta name="theme-color" content="#000000" />
-<meta name="msapplication-TileColor" content="#000000" />
+<meta name="theme-color" content="darkslategray" />
+<meta name="msapplication-TileColor" content="darkslategray" />
 <meta name="msapplication-TileImage" content="images/icon/mstile-144x144.png" />
 <meta name="msapplication-square70x70logo" content="images/icon/mstile-70x70.png" />
 <meta name="msapplication-square150x150logo" content="images/icon/mstile-150x150.png" />
