--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
 <meta property="og:type" content="profile">
 <meta property="og:title" content="Onyeka Ijeh - Full Stack Web Developer based in Nigeria.">
 <meta property="og:url" content="http://onyeka.name.ng">
-<meta property="og:image" content="http://onyeka.name.ng/images/onyeka-bg.jpg">
+<meta property="og:image" content="http://onyekaijeh.github.io/images/onyeka-icon.png">
 <meta property="profile:first_name" content="Onyeka">
 <meta property="profile:last_name" content="Ijeh">
 
@@ -42,7 +42,7 @@
 <meta name="twitter:site" content="@onyekaijeh">
 <meta name="twitter:title" content="Onyeka Ijeh - Full Stack Web Developer">
 <meta name="twitter:description" content="Onyeka Ijeh is a Full Stack Web Developer based in Nigeria.">
-<meta name="twitter:image" content="http://onyeka.name.ng/images/onyeka-bg.jpg">
+<meta name="twitter:image" content="http://onyekaijeh.github.io/images/onyeka-icon.png">
 
 <meta name="theme-color" content="black">
 <meta name="msapplication-TileColor" content="black">
