--- a/index.html
+++ b/index.html
@@ -25,8 +25,7 @@
   <link rel="stylesheet" href="css/foundation-icons/foundation-icons.css">
   <link rel="stylesheet" href="css/main.css">
 
-  <!-- Facebook and Twitter stuff 
-  -------------------------------------------------- -->
+  <!-- Facebook and Twitter stuff -->
 
 <!-- Facebook OpenGraph -->
 <meta property="og:type" content="profile">
@@ -71,7 +70,7 @@
 
                     <div class="about">
                        <p class="blue"><strong class="heading">Hello.</strong></p>
-                       <p>I am Onyeka Ijeh, a 22 year old full stack web developer based in Nigeria. I am a graduate of University of Benin where I studied Electrical/Electronic Engineering.</p>
+                       <p>I am Onyeka Ijeh, a 23 year old full stack web developer based in Nigeria. I am a graduate of University of Benin where I studied Electrical/Electronic Engineering.</p>
                        <p>I run <span class="blue">TechStudio</span>, a development agency that helps build product features for early stage and growing start-ups.</p>
                        <p>I write technical articles, love to teach and also a public speaker.</p>
                        <p>I write code mainly in <span class="blue">PHP</span>, because it is my first love but I'm also good in <span class="blue">Javascript</span> and <span class="blue">Python</span>.</p>
