--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <!-- Basic Page Needs
   –––––––––––––––––––––––––––––––––––––––––––––––––– -->
   <meta charset="utf-8">
-  <title>Onyeka Ijeh - Full Stack Web Developer</title>
+  <title>Onyeka Ijeh - Full Stack Software Engineer</title>
   <meta name="description" content="Onyeka Ijeh is a Full Stack Web Developer based in Nigeria.">
   <meta name="author" content="Onyeka Ijeh">
 
@@ -110,7 +110,7 @@
               <span class="blue">Arduino</span>, and I'd love to delve more into
               <span class="blue">IoT</span>.</p>
             <p>Wanna talk? Say
-              <a href="mailto:hello@onyeka.name.ng">hello@onyeka.name.ng</a>
+              <a href="mailto:hello@onyeka.xyz">hello@onyeka.xyz</a>
             </p>
           </div>
         </div>
