--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   –––––––––––––––––––––––––––––––––––––––––––––––––– -->
   <meta charset="utf-8">
   <title>Onyeka Ijeh - Full Stack Software Engineer</title>
-  <meta name="description" content="Onyeka Ijeh is a Full Stack Web Developer based in Nigeria.">
+  <meta name="description" content="Onyeka Ijeh is a Software Engineer based in Nigeria.">
   <meta name="author" content="Onyeka Ijeh">
 
   <!-- Mobile Specific Metas
@@ -64,7 +64,7 @@
           <h2 class="blue heading">Onyeka Ijeh
           </h2>
           <h6 class="sub-heading white">
-            <strong>Full Stack Web Developer - Tutor - Public Speaker - Writer</strong>
+            <strong>Software Engineer</strong>
           </h6>
           <ul class="icons">
             <li>
@@ -93,13 +93,12 @@
             <p class="blue">
               <strong class="heading">Hello.</strong>
             </p>
-            <p>I am Onyeka Ijeh, a 24 year old full stack web developer based in Nigeria. I am a graduate of University of Benin
-              where I studied Electrical/Electronic Engineering.</p>
+            <p>I am Onyeka Ijeh, a Software Engineer based in Nigeria and a graduate of Electrical/Electronic Engineering from the University of Benin.</p>
             <p>I run
               <span class="blue">TechStudio</span>, a development agency that helps build product features for early stage and growing start-ups.</p>
             <p>I write technical articles, love to teach and also a public speaker.</p>
-            <p>I write code mainly in
-              <span class="blue">PHP</span>, because it is my first love but I'm also good in
+            <p>I code majorly in
+              <span class="blue">PHP</span>, 
               <span class="blue">Javascript</span> and
               <span class="blue">Python</span>.</p>
             <p>My go-to frameworks for my projects are
